--- a/index.html
+++ b/index.html
@@ -142,12 +142,12 @@
 											<p>Most recent first, these aren't on my resume:</p>
 											<ul style="list-style-type: none; padding-left: 2%;">
 												<li style="margin-bottom: 20px;">
-													<a href="https://github.com/akshitadixit/flowfsm" style="color: #d772e4; font-weight: bold;">Flow FSM</a><a href="https://pepy.tech/projects/flow-fsm"><img src="https://static.pepy.tech/badge/flow-fsm" alt="PyPI Downloads"></a>
+													<a href="https://github.com/akshitadixit/flowfsm" style="color: #d772e4; font-weight: bold;">Flow FSM</a>&emsp; <a href="https://pepy.tech/projects/flow-fsm"><img src="https://static.pepy.tech/badge/flow-fsm" alt="PyPI Downloads"></a>
 													<br>
 													<p style="margin-top: 5px;">A versatile Python framework for building and managing finite state machines and workflows, (in future maybe) graph-based systems with ease and flexibility. </p>
 												</li>
 												<li style="margin-bottom: 20px;">
-													<a href="https://pypi.org/project/readme-builder/" style="color: #d772e4; font-weight: bold;">Automatic README builder</a><a href="https://pepy.tech/projects/readme-builder"><img src="https://static.pepy.tech/badge/readme-builder" alt="PyPI Downloads"></a>
+													<a href="https://pypi.org/project/readme-builder/" style="color: #d772e4; font-weight: bold;">Automatic README builder</a>&emsp; <a href="https://pepy.tech/projects/readme-builder"><img src="https://static.pepy.tech/badge/readme-builder" alt="PyPI Downloads"></a>
 													<br>
 													<p style="margin-top: 5px;">I was annoyed of having to write README files for my projects. So I went ahead and created a CLI tool to auto-generate a README file for any project regardless of programming language! 📜 ✨ </p>
 												</li>
