--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 											text-decoration: none;
 										}
 									</style>
-									<a href="https://drive.google.com/file/d/1ZUbyx4hITXLIobknRX3wVNN8wZivU-Wt/view?usp=drive_link"><button class="btn">View Resume</button></a>
+									<a href="https://drive.google.com/file/d/17lsDtZ5H5qYBlz8T8wAmHoI8YzmBpSuK/view?usp=sharing"><button class="btn">View Resume</button></a>
 									<br>
 
 									<a href="https://www.buymeacoffee.com/plastic96">
